[workspace.package]
version = "1.0.0"
authors = ["Polkadot Fellowship"]
edition = "2021"
repository = "https://github.com/polkadot-fellows/runtimes.git"
license = "GPL-3.0-only"                                        # TODO <https://github.com/polkadot-fellows/runtimes/issues/29>

[workspace.dependencies]
hex = { version = "0.4.3", default-features = false }
approx = { version = "0.5.1" }
array-bytes = { version = "9.3.0" }
clap = { version = "4.5.0" }
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
hex-literal = { version = "0.4.1" }
log = { version = "0.4.22", default-features = false }
primitive-types = { version = "0.13.1", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
separator = { version = "0.4.1" }
serde = { version = "1.0.214" }
serde_json = { version = "1.0.132", default-features = false }
smallvec = { version = "1.13.1" }
tokio = { version = "1.45.0" }
ss58-registry = { version = "1.47.0" }

pallet-election-provider-multi-block = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-staking-async = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
asset-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020" }
assets-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
authority-discovery-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false, package = "sp-authority-discovery" }
babe-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false, package = "sp-consensus-babe" }
beefy-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false, package = "sp-consensus-beefy" }
binary-merkle-tree = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
bp-bridge-hub-cumulus = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
cumulus-pallet-weight-reclaim = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
grandpa-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false, package = "sp-consensus-grandpa" }
pallet-asset-conversion = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-asset-conversion-tx-payment = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-asset-rate = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-assets-precompiles = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-bags-list = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-beefy = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-beefy-mmr = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-broker = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-child-bounties = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-conviction-voting = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-dap = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-fast-unstake = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-mmr = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-multi-asset-bounties = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-nfts = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-nfts-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-migrations = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-nomination-pools = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-nomination-pools-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-offences-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-parameters = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-referenda = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-revive = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-delegated-staking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-staking-async-ah-client = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-staking-async-rc-client = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020" }
pallet-staking-reward-fn = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-staking-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-state-trie-migration = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-uniques = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-whitelist = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-xcm-benchmarks = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-xcm-precompiles = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
pallet-xcm-bridge-hub-router = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
parachain-info = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false, package = "staging-parachain-info" }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
parachains-runtimes-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
remote-externalities = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", package = "frame-remote-externalities" }
runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false, package = "polkadot-runtime-parachains" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020" }
snowbridge-outbound-queue-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
snowbridge-pallet-system-frontend = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
snowbridge-inbound-queue-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
snowbridge-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-debug-derive = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020" }
sp-npos-elections = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020" }
xcm = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false, package = "staging-xcm" }
xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false, package = "staging-xcm-builder" }
xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false, package = "staging-xcm-executor" }
xcm-runtime-apis = { git = "https://github.com/paritytech/polkadot-sdk", rev = "3768df0fc7a42419e1774bda79031cceec130020", default-features = false }

pallet-rc-migrator = { path = "pallets/rc-migrator", default-features = false }
pallet-ah-ops = { path = "pallets/ah-ops", default-features = false }
asset-hub-polkadot-runtime = { path = "system-parachains/asset-hubs/asset-hub-polkadot" }
bp-asset-hub-polkadot = { path = "system-parachains/asset-hubs/asset-hub-polkadot/primitives", default-features = false }
bp-bridge-hub-kusama = { path = "system-parachains/bridge-hubs/bridge-hub-kusama/primitives", default-features = false }
bp-bridge-hub-polkadot = { path = "system-parachains/bridge-hubs/bridge-hub-polkadot/primitives", default-features = false }
collectives-polkadot-runtime-constants = { path = "system-parachains/collectives/collectives-polkadot/constants" }
kusama-runtime-constants = { path = "relay/kusama/constants", default-features = false }
polkadot-runtime = { path = "relay/polkadot" }
polkadot-runtime-constants = { path = "relay/polkadot/constants", default-features = false }
system-parachains-constants = { path = "system-parachains/constants", default-features = false }
system-parachains-common = { path = "system-parachains/common", default-features = false }

[workspace]
resolver = "2"

members = [
	"chain-spec-generator",
	"pallets/ah-ops",
	"pallets/rc-migrator",

	"relay/kusama/constants",
	"relay/polkadot",
	"relay/polkadot/constants",

	"system-parachains/asset-hubs/asset-hub-polkadot",
	"system-parachains/asset-hubs/asset-hub-polkadot/primitives",
	"system-parachains/bridge-hubs/bridge-hub-kusama/primitives",
	"system-parachains/bridge-hubs/bridge-hub-polkadot/primitives",
	"system-parachains/collectives/collectives-polkadot/constants",
	"system-parachains/common",
	"system-parachains/constants",
]

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
