[package]
name = "chain-spec-generator"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde = { features = ["derive"], workspace = true }

polkadot-runtime = { workspace = true, optional = true }

sc-chain-spec = { workspace = true }
sc-network = { workspace = true }

asset-hub-polkadot-runtime = { workspace = true, optional = true }

[features]
default = ["all-runtimes"]
fast-runtime = ["polkadot-runtime?/fast-runtime"]
runtime-benchmarks = [
	"asset-hub-polkadot-runtime?/runtime-benchmarks",
	"polkadot-runtime?/runtime-benchmarks",
]

on-chain-release-build = [
	"asset-hub-polkadot-runtime?/on-chain-release-build",
	"polkadot-runtime?/on-chain-release-build",
]

polkadot = ["polkadot-runtime"]
asset-hub-polkadot = ["asset-hub-polkadot-runtime"]

all-runtimes = [
	"asset-hub-polkadot",
	"polkadot",
]
