[package]
name = "pallet-rc-migrator"
description = "Operational pallet managing and processing migration from Relay Chain to Asset Hub on Relay Chain"
license = "Apache-2.0"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { features = ["derive"], optional = true, workspace = true }

frame-support = { workspace = true, features = ["experimental"] }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-xcm = { workspace = true }
sp-api = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]

polkadot-ahm = []
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-xcm/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-xcm/try-runtime",
	"sp-runtime/try-runtime",
]
