[package]
authors.workspace = true
description = "Shared utilities between system-parachains runtimes"
edition.workspace = true
license.workspace = true
name = "system-parachains-common"
repository.workspace = true
version.workspace = true

[dependencies]
codec = { features = ["derive", "max-encoded-len"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

sp-runtime = { workspace = true }
sp-api = { workspace = true }

frame-support = { workspace = true }
polkadot-primitives = { workspace = true }
pallet-multi-asset-bounties = { workspace = true, optional = true }

[features]
default = ["std"]
multi-asset-bounties = ["pallet-multi-asset-bounties"]
std = [
	"codec/std",
	"frame-support/std",
	"pallet-multi-asset-bounties?/std",
	"polkadot-primitives/std",
	"scale-info/std",
	"sp-api/std",
	"sp-runtime/std",
]

runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"pallet-multi-asset-bounties?/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
	"pallet-multi-asset-bounties?/try-runtime",
	"sp-runtime/try-runtime",
]
