[package]
name = "kusama-runtime-constants"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
polkadot-primitives = { workspace = true }

[features]
default = ["std"]
std = [
	"polkadot-primitives/std",
]
runtime-benchmarks = [
	"polkadot-primitives/runtime-benchmarks",
]
