[package]
name = "bp-asset-hub-polkadot"
description = "Primitives of AssetHubPolkadot parachain runtime."
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
system-parachains-constants = { workspace = true }
frame-support = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"system-parachains-constants/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"system-parachains-constants/runtime-benchmarks",
]
