[package]
name = "bp-bridge-hub-kusama"
description = "Primitives of BridgeHubKusama parachain runtime."
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frame-support = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
]
