[package]
name = "bp-bridge-hub-polkadot"
description = "Primitives of BridgeHubPolkadot parachain runtime."
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kusama-runtime-constants = { workspace = true }
polkadot-runtime-constants = { workspace = true }
system-parachains-constants = { workspace = true }

bp-bridge-hub-cumulus = { workspace = true }

frame-support = { workspace = true }
sp-runtime = { workspace = true }

xcm = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-bridge-hub-cumulus/std",
	"frame-support/std",
	"kusama-runtime-constants/std",
	"polkadot-runtime-constants/std",
	"sp-runtime/std",
	"system-parachains-constants/std",
	"xcm/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"kusama-runtime-constants/runtime-benchmarks",
	"polkadot-runtime-constants/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"system-parachains-constants/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]
